@@ -36,6 +36,15 @@
 <div class="document">
 
 
+<p>2011-11-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/tga.c (ReadTGAImage): Fix for poor TGA reading
+performance due to excessive use of GetBlobByte().  Performance is
+fixed by adding local buffering.  Fixes SourceForge bug 3439531
+&quot;Slow TGA reading&quot;.</li>
+</ul>
+</blockquote>
 <p>2011-11-19  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
